--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-node_modules
+.DS_Store
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+ex1/
+ex2full/
